force-app/main/default/objects/ssot__AccountContact__dlm/fields/cdp_crm_dk1__rel_1697796246048_end__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk1__rel_1697796246048_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_MailingAddressId_map_ssot_Id_16_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>ssot_MailingAddressId_map_ssot_Id_16_rel</relationshipLabel>
    <relationshipName>rel_1697796246048_end</relationshipName>
    <type>Lookup</type>
</CustomField>