force-app/main/default/objects/ssot__AccountContact__dlm/fields/cdp_crm_dk1__rel_1697796246141_end__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk1__rel_1697796246141_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_BusinessPhoneId_map_ssot_Id_163_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>ssot_BusinessPhoneId_map_ssot_Id_163_rel</relationshipLabel>
    <relationshipName>rel_1697796246141_end</relationshipName>
    <type>Lookup</type>
</CustomField>