force-app/main/default/objects/ssot__AccountContact__dlm/fields/cdp_crm_dk1__rel_1697796246754_end__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk1__rel_1697796246754_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_IndividualId_map_ssot_Id_163951_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ssot_IndividualId_map_ssot_Id_163951_rel</relationshipLabel>
    <relationshipName>rel_1697796246754_end</relationshipName>
    <type>Lookup</type>
</CustomField>