force-app/main/default/objects/ssot__AccountContact__dlm/fields/cdp_crm_dk2__ssot_AccountId_map_ssot_Id_1639532173489__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk2__ssot_AccountId_map_ssot_Id_1639532173489__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_AccountId_map_ssot_Id_1639532173489</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ssot_AccountId_map_ssot_Id_1639532173489</relationshipLabel>
    <relationshipName>ssot_AccountId_map_ssot_Id_1639532173489</relationshipName>
    <type>Lookup</type>
</CustomField>