force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__IsIncludedInGroup__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsIncludedInGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Included In Group</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsIncludedInGroup</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>