force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__IsPrimaryMember__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Member</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryMember</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>